--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "allure-commandline": "^1.5.0",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.7",
     "vuetify": "^2.2.11"
