--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "allure-commandline": "^1.5.0",
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
     "jszip": "^3.5.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.1.1",
     "vue-router": "^3.4.7",
     "vuetify": "^2.2.11"
   },
