--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
+    "fs": "0.0.1-security",
     "jszip": "^3.5.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.1",
