--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^5.9.55",
     "allure-commandline": "^1.5.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "file-saver": "^2.0.2",
     "fs": "0.0.1-security",
     "jszip": "^3.5.0",
+    "material-design-icons-iconfont": "^6.1.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vuetify": "^2.2.11"
@@ -26,6 +29,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "nodemon": "^2.0.9",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
